todo-chart/templates/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
  - "*"
  gateways:
  - todo-gateway
  http:
  - route:
    - destination:
        host: todo-todo-chart
        subset: v1
        port:
          number: 4010
  - route:
    - destination:
        host: todo-todo-chart
        subset: v2
        port:
          number: 4010

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo
spec:
  host: todo-todo-chart
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
